--- a/src/components/task-item/task-item.module.css
+++ b/src/components/task-item/task-item.module.css
@@ -1,6 +1,6 @@
 .taskItem {
   flex-grow: 1;
-  background-color: #ffffff;
+  background-color: #f48240;
   padding: 1rem;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
