--- a/src/components/task-item/task-item.module.css
+++ b/src/components/task-item/task-item.module.css
@@ -37,3 +37,10 @@
   user-select: none;
   cursor: pointer;
 }
+
+.deleteButton {
+  background-color: red;
+  cursor: pointer;
+  color: white;
+  font-size: 2rem;
+}
