--- a/src/App.module.css
+++ b/src/App.module.css
@@ -14,6 +14,9 @@
   border-radius: 12px;
   padding: 2rem;
   text-align: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
