--- a/src/components/countdown-timer/countdown-timer.module.css
+++ b/src/components/countdown-timer/countdown-timer.module.css
@@ -1,3 +1,31 @@
+.container {
+  background-color: #E7312D;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 15%;
+  padding: 75px 30px;
+}
 .timerDisplay {
-  font-size: 5rem;
+  background-color: #FDBF30;
+  border-radius: 50%;
+  height: 20rem;
+  width: 20rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.timeLeft {
+  font-size: 8rem;
+}
+
+.button {
+  background-color: black;
+  color: #F8D095;
+  border-radius: 30px;
+  font-size: 2rem;
+  padding: 20px;
+  margin-top: 20px;
 }
